// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box edge-cases handles null child in children array 1`] = `
<div
  className="sc-chPdSV iSpSbR"
  data-name="Box"
/>
`;

exports[`Box structure Renders correct structure when no spacing 1`] = `
<div
  className="sc-bwzfXH RkOMy"
  data-name="Box"
>
  Text
</div>
`;

exports[`Box structure Renders correct structure when spacing AND children length > 1 1`] = `
<div
  className="sc-bZQynM fkVGVg"
  data-name="Box"
>
  <div
    className="sc-gzVnrw XLReL"
    data-name="BoxChildren"
  >
    <div
      className="sc-htoDjs ieYwg"
      data-name="BoxChild"
    >
      <div
        isChild={true}
      >
        Text 1
      </div>
    </div>
    <div
      className="sc-htoDjs ieYwg"
      data-name="BoxChild"
    >
      <div
        isChild={true}
      >
        Text 2
      </div>
    </div>
  </div>
</div>
`;

exports[`Box structure Renders correct structure when spacing AND children length > 1 and children are Box 1`] = `
<div
  className="sc-dnqmqq bWnroz"
  data-name="Box"
>
  <div
    className="sc-iwsKbI duhjjT"
    data-name="BoxChildren"
  >
    <div
      className="sc-gZMcBi dnGCkP"
      data-name="BoxChild"
    >
      <div
        className="sc-VigVT faYjXQ"
        data-name="Box"
      >
        Text 1
      </div>
    </div>
    <div
      className="sc-gZMcBi dnGCkP"
      data-name="BoxChild"
    >
      <div
        className="sc-jzJRlG hXlUWV"
        data-name="Box"
      >
        Text 2
      </div>
    </div>
  </div>
</div>
`;

exports[`Box structure Renders correct structure when spacing BUT children length === 1 1`] = `
<div
  className="sc-ifAKCX jeYrHN"
  data-name="Box"
>
  Text
</div>
`;
